# E-Commerce-Microservices

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
address-service/app/: main.py
admin-service/: Dockerfile
admin-service/app/: main.py
analytics-service/: Dockerfile
analytics-service/app/: main.py
api-gateway/: Dockerfile  go.mod
api-gateway/cmd/: main.go
audit-service/: Dockerfile  pyproject.toml
audit-service/app/: main.py
audit-service/tests/: test_redaction.py
auth-service/: Dockerfile  pyproject.toml
auth-service/app/: __init__.py  main.py
auth-service/app/api/v1/: __init__.py  routes.py
auth-service/app/core/: config.py  database.py  exceptions.py  logging.py  redis.py  security.py
auth-service/app/middleware/: error_handler.py  security.py
auth-service/app/models/: user.py
auth-service/app/observability/: metrics.py
auth-service/app/repositories/: user_repository.py
auth-service/app/schemas/: user.py
auth-service/app/services/: auth_service.py  kafka_publisher.py
auth-service/tests/: test_schemas.py  test_security.py
catalog-service/: Dockerfile  pom.xml
chat-service/: Dockerfile  go.mod
chat-service/cmd/: main.go
chat-service/tests/: test_chat_logic.py
coupon-service/: Dockerfile
coupon-service/app/: main.py
coupon-service/tests/: test_coupon_logic.py
deploy/helm/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
dispute-service/: Dockerfile
dispute-service/app/: main.py
dispute-service/tests/: test_dispute_logic.py
docs/: API.md  ARCHITECTURE.md  AUDIT.md  DEPLOY.md  KNOWN_ISSUES.md  SECURITY.md  TESTING.md
docs/api/: addresses.md  admin.md  analytics.md  audit.md  cart.md  chat.md  coupons.md  disputes.md  flashsale.md  fraud.md  loyalty.md  notifications.md  orders.md  payments.md  products.md  recommendations.md  reviews.md  search.md  seller.md  shipping.md  users.md  wishlist.md
flashsale-service/: Dockerfile  go.mod
fraud-service/: Dockerfile
infra/: otel-collector.yaml
loyalty-service/: Dockerfile
notification-service/: Dockerfile  pyproject.toml
notification-service/app/: main.py
notification-service/app/core/: config.py  database.py  logging.py
notification-service/app/observability/: metrics.py
notification-service/app/services/: notification_service.py
notification-service/app/templates/: order_created.html  payment_failed.html  payment_success.html  welcome.html
notification-service/app/workers/: kafka_consumer.py
order-service/: Dockerfile  go.mod
payment-service/: Dockerfile  go.mod
recommendation-service/: Dockerfile
review-service/: Dockerfile
scripts/: gen-certs.sh  migrate.sh  setup.sh  test.sh
search-service/: Dockerfile  pyproject.toml
search-service/app/: main.py
search-service/app/core/: config.py
search-service/app/services/: es_client.py  search_service.py
seller-service/: Dockerfile
shipping-service/: Dockerfile  go.mod
wishlist-service/: Dockerfile
(+123 files in other folders)
