[project]
name = "auth-service"
version = "1.0.0"
description = "Authentication & User Service for E-Commerce Microservices"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "sqlalchemy[asyncio]==2.0.31",
    "asyncpg==0.29.0",
    "alembic==1.13.2",
    "redis==5.0.7",
    "python-jose[cryptography]==3.3.0",
    "passlib[argon2]==1.7.4",
    "pyotp==2.9.0",
    "python-multipart==0.0.9",
    "email-validator==2.2.0",
    "kafka-python==2.0.2",
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-instrumentation-sqlalchemy==0.48b0",
    "opentelemetry-instrumentation-redis==0.48b0",
    "opentelemetry-exporter-otlp==1.27.0",
    "structlog==24.2.0",
    "tenacity==8.4.2",
    "httpx==0.27.0",
    "cryptography==42.0.8",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "bandit==1.7.9",
    "safety==3.2.4",
    "ruff==0.5.1",
    "mypy==1.10.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "PIE", "RET", "SIM", "PL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests
"app/core/security.py" = ["S105"]  # allow password-related strings

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # skip assert warning
