[project]
name = "notification-service"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "sqlalchemy[asyncio]==2.0.31",
    "asyncpg==0.29.0",
    "redis==5.0.7",
    "kafka-python==2.0.2",
    "jinja2==3.1.4",
    "aiosmtplib==3.0.2",
    "httpx==0.27.0",
    "structlog==24.2.0",
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-exporter-otlp==1.27.0",
    "prometheus-client==0.20.0",
    "tenacity==8.4.2",
]
