[project]
name = "search-service"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "redis==5.0.7",
    "kafka-python==2.0.2",
    "elasticsearch>=8.14.0,<9.0.0",
    "prometheus-client==0.20.0",
    "httpx==0.27.0",
]
